<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WalkThroughActivity">

    <!--  UPPER SCREENSHOT -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/walkthrough_01"
        android:id="@+id/imageView32"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/accept"
        android:adjustViewBounds="true" />

    <!-- INTERMEDIATE LAYOUT -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/imageView32">

        <app.com.cvjuanresume.juansandoval.cvjuanresume.utils.CustomizedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_slide2"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            app:font="@string/font_roboto_regular"
            android:id="@+id/title_walk" />

        <app.com.cvjuanresume.juansandoval.cvjuanresume.utils.CustomizedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_slide2"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_below="@+id/title_walk"
            android:textSize="20sp"
            android:gravity="center"
            android:id="@+id/text_walk"
            app:font="@string/font_roboto_light"/>

        <app.com.cvjuanresume.juansandoval.cvjuanresume.utils.CustomizedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright_slide2"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="1dp"
            android:id="@+id/powered_walk"
            app:font="@string/font_roboto_thin"/>

    </RelativeLayout>


</RelativeLayout>