<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AboutMeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <app.com.cvjuanresume.juansandoval.cvjuanresume.utils.CustomizedTextView
            android:id="@+id/label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:text="@string/fragment_title_contactme"
            android:textSize="45sp"
            android:textStyle="bold"
            app:font="@string/font_roboto_regular" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="20dp"
                android:hint="@string/email_hint" />

            <EditText
                android:id="@+id/et_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="20dp"
                android:hint="@string/subjectl_hint" />

            <EditText
                android:id="@+id/et_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="20dp"
                android:hint="@string/message_hint"
                android:inputType="textPostalAddress" />

            <Button
                android:id="@+id/btnSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                android:background="@color/btn_login_bg"
                android:text="@string/send_button"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>