<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/aboutmebg"
    tools:context=".fragments.AboutMeFragment">


    <app.com.cvjuanresume.juansandoval.cvjuanresume.utils.CustomizedTextView
        android:id="@+id/label"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="45sp"
        app:font="@string/font_roboto_regular"
        android:text="@string/fragment_title_aboutme"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/label"
        android:orientation="vertical">

        <app.com.cvjuanresume.juansandoval.cvjuanresume.utils.CustomizedTextView
            android:id="@+id/aboutme_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginTop="30dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/aboutme_content0"
            android:textSize="16sp"
            app:font="@string/font_roboto_light"/>

        <app.com.cvjuanresume.juansandoval.cvjuanresume.utils.CustomizedTextView
            android:id="@+id/aboutme_content1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="30dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/aboutme_content"
            android:textSize="16sp"
            app:font="@string/font_roboto_light" />

        <app.com.cvjuanresume.juansandoval.cvjuanresume.utils.CustomizedTextView
            android:id="@+id/aboutme_content2"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="30dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/aboutme_content2"
            android:textSize="16sp"
            app:font="@string/font_roboto_light" />


    </LinearLayout>

<!--    <TextView
        android:layout_below="@id/label"
        android:layout_centerInParent="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="12dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="Edit fragment_home.xml to change the appearance" />-->

</RelativeLayout>